[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://scenes/ChatBox.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Node"]

script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PlayerList" type="Label" parent="PanelContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1010.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Players: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="StartGame" type="Button" parent="PanelContainer/VBoxContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START GAME"
flat = false
align = 1

[node name="ChatBox" parent="PanelContainer/VBoxContainer" index="2" instance=ExtResource( 2 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[connection signal="pressed" from="PanelContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]


